force-app/main/default/objects/csfb__Conga_Solution_Template__c/fields/csfb__Output_File_Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__Output_File_Name__c</fullName>
    <label>Output File Name (OFN)</label>
    <type>TextArea</type>
</CustomField>