force-app/main/default/objects/csfb__Conga_Solution_Template__c/fields/csfb__Template_Extension__c.field-meta.xml
<CustomField>
    <fullName>csfb__Template_Extension__c</fullName>
    <label>Template Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>