force-app/main/default/objects/csfb__Conga_Solution_Template__c/fields/csfb__Template_Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__Template_Name__c</fullName>
    <formula>csfb__Conga_Template__r.csfb__Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template Name</label>
    <type>Text</type>
</CustomField>